--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,18 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sellertrucker.SplashActivity">
+    android:orientation="vertical"
+    tools:context="com.sellertrucker.SplashActivity"
+    android:baselineAligned="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Hello World!"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:layout_margin="15dp"
+        android:text="prime toast"
+        android:orientation="fill_horizontal"
+        android:background="#E3E4E2"
+        >
+        <view
+            android:layout_width="0dp"
+            android:layout_weight="0.35"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"/>
+        <view
+            android:layout_width="0dp"
+            android:layout_weight="0.65"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
+
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_margin="15dp"
+        android:layout_gravity="clip_vertical"
+        android:background="#E3E4E2"
+        android:text=""
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_margintop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="#E3E4E2"
+        android:orientation="vertical"
+        android:text=""
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="요청! 서울시 서초구 양재2동"v
+            android:gravity="bottom"
+            android:textSize="20dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="오늘 오후 6시에 방문 가능하신가요!"
+            android:textSize="20dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="bottom"
+            android:text="요청! 서울시 서초구 양재2동"
+            android:textSize="20dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="에어컨 판매하고 싶습니다."
+            android:textSize="20dp"
+            />
+    </LinearLayout>
+    <view
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_margintop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="#E3E4E2"
+        android:text=""
+    />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:layout_margintop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="#E3E4E2"
+        android:orientation="horizontal"
+        android:text="">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_margin="5dp"
+            android:layout_height="match_parent"
+
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_margin="5dp"
+            android:layout_height="match_parent"
+            android:text="310,640 won"
+            android:textSize="40dp"
+            android:gravity="center_vertical"
+
+            />
+
+    </LinearLayout>
+
+    
+
+
+</LinearLayout>
