--- a/app/src/main/res/layout/fragment_pos.xml
+++ b/app/src/main/res/layout/fragment_pos.xml
@@ -5,12 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     >
 
 
-
-    <TabHost
+    <LinearLayout
+        android:id="@+id/타코"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentEnd="true"
@@ -19,97 +18,54 @@
         android:layout_marginTop="10sp"
         android:layout_weight="2">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/menu01"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_weight="0.25"
+            android:background="#FFC478"
+            android:gravity="center_vertical"
+            android:text="메뉴 1"
+            android:textAlignment="center">
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        </TextView>
 
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/menu02"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:background="#FFC478"
+            android:gravity="center_vertical"
+            android:text="메뉴 2"
+            android:textAlignment="center">
 
-                <LinearLayout
-                    android:id="@+id/타코"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        </TextView>
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.25"
-                        android:background="#FFC478"
-                        android:gravity="center_vertical"
-                        android:text="메뉴 1"
-                        android:textAlignment="center">
+        <TextView
+            android:id="@+id/menu03"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:background="#FFC478"
+            android:gravity="center_vertical"
+            android:text="메뉴 3"
+            android:textAlignment="center">
 
-                    </TextView>
+        </TextView>
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.25"
-                        android:background="#FFC478"
-                        android:gravity="center_vertical"
-                        android:text="메뉴 2"
-                        android:textAlignment="center">
+        <TextView
+            android:id="@+id/menu04"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:background="#FFC478"
+            android:gravity="center_vertical"
+            android:text="메뉴 4"
+            android:textAlignment="center">
 
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.25"
-                        android:background="#FFC478"
-                        android:gravity="center_vertical"
-                        android:text="메뉴 3"
-                        android:textAlignment="center">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.25"
-                        android:background="#FFC478"
-                        android:gravity="center_vertical"
-                        android:text="메뉴 4"
-                        android:textAlignment="center">
-
-                    </TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/부리또"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/퀘사디아"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/음료"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                </LinearLayout>
-            </FrameLayout>
-        </LinearLayout>
-    </TabHost>
+        </TextView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -123,6 +79,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.2"
@@ -131,6 +88,7 @@
             android:textSize="20sp" />
 
         <ListView
+            android:id="@+id/menu_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.8">
@@ -158,9 +116,11 @@
 
         <Button
             android:layout_width="0dp"
+            android:id="@+id/barcode"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
+            android:text="바코드인식"
             android:layout_weight="0.5"
             android:background="#F3B96E" />
 
@@ -173,11 +133,13 @@
             android:background="#F3B96E" />
 
         <Button
+            android:id="@+id/cash"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
+            android:text="현금결제"
             android:background="#F3B96E" />
     </LinearLayout>
 
