seller 기본 디자인 완료

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/wrap" />
+        android:layout_above="@+id/wrap"
+        android:background="#ffffff"/>
 
     <FrameLayout
         android:id="@+id/wrap"
