--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,16 +27,50 @@
         android:orientation="horizontal"
         android:background="#E3E4E2"
         >
-        <View
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="3sp"
+            android:background="@drawable/xml_border3">
+        <ImageView
             android:layout_width="0dp"
             android:layout_weight="0.35"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"/>
-        <View
+            android:layout_margin="5dp"
+            app:srcCompat="@drawable/fragment_my_truck_a"
+            />
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.65"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:text="음식 > 간식 > 토스트"
+                android:gravity="bottom">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:text="프라임 토스트"
+                android:textSize="20sp"
+                android:gravity="center_vertical">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:text="010-1234-5678"
+                android:textSize="20sp"
+                android:gravity="center_vertical"
+                >
+            </TextView>
+        </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <!--<View-->
@@ -100,17 +134,25 @@
             <!--android:textSize="20dp"-->
             <!--/>-->
     <!--</LinearLayout>-->
-    <View
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="#E3E4E2"
-        android:text=""
+        android:layout_weight="0.5">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.4"
+            android:layout_marginLeft="15sp"
+            app:srcCompat="@drawable/today_sales"
+
         />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.6"
+            android:layout_height="wrap_content">
+        </View>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -120,37 +162,48 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:background="#E3E4E2"
-        android:orientation="horizontal"
-        android:text="">
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/xml_border6"
+            android:orientation="horizontal"
+            android:layout_margin="3sp"
+            android:text="">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_weight="0.3"
-            android:layout_margin="5dp"
-            android:layout_height="match_parent"
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="0.3"
+                android:layout_margin="5dp"
+                android:layout_height="match_parent"
 
-            />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.7"
-            android:layout_margin="5dp"
-            android:layout_height="match_parent"
-            android:text="310,640 won"
-            android:textSize="40dp"
-            android:gravity="center_vertical"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.7"
+                android:layout_margin="5dp"
+                android:layout_height="match_parent"
+                android:text="310,640 ₩"
+                android:textSize="40sp"
+                android:gravity="center_vertical"
+                android:textAlignment="center"
 
-            />
 
+                />
+
+        </LinearLayout>
     </LinearLayout>
-    <android.support.v7.widget.AppCompatImageView
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="#E3E4E2"
-        />
+        android:layout_marginTop="5dp"
+        android:layout_weight="3"
+        app:srcCompat="@drawable/bargraph"
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
