--- a/app/src/main/res/layout/dialog_cash.xml
+++ b/app/src/main/res/layout/dialog_cash.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
+    android:gravity="center_vertical"
     >
 
 
@@ -15,6 +16,7 @@
         android:text="결제가 완료되었습니다."
         android:layout_gravity="center"
         android:textSize="20sp"
+        android:gravity="center_horizontal"
         />
 
 
@@ -22,20 +24,25 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="당일 매출 금액 : 143,000 원"
+        android:text="총 판매 금액 : 143,000 원"
         android:textSize="20sp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
         />
 
 
     <TextView
         android:id="@+id/ok"
         android:layout_marginTop="10dp"
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
+        android:layout_width="80dp"
+        android:textColor="#ffffff"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="확인"
+        android:background="@drawable/mybutton"
+        android:text="확 인"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:textAlignment="center"
         />
 
 
