--- a/app/src/main/res/layout/fragment_my_truck.xml
+++ b/app/src/main/res/layout/fragment_my_truck.xml
@@ -6,34 +6,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:layout_margin="10dp"
-        android:background="@drawable/xml_border"/>
+        android:layout_weight="0.6"
+        android:layout_margin="10sp"
+        app:srcCompat="@drawable/foodtruck3"
+        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:layout_margin="10dp"
+        android:layout_margin="10sp"
         >
         <TextView
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="wrap_content"
-            android:text="일자"
-            android:textSize="20sp"
+            android:text="트럭명"
+            android:textSize="12sp"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal"
+            android:textColor="#000000"
             >
         </TextView>
         <View
             android:layout_width="0dp"
             android:layout_weight="0.8"
             android:layout_height="wrap_content"
-            android:background="@drawable/xml_border"
+            android:background="@drawable/xml_border4"
             >
         </View>
     </LinearLayout>
@@ -42,22 +44,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:layout_margin="10dp">
+        android:layout_margin="10sp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="wrap_content"
-            android:text="성별"
-            android:textSize="20sp"
+            android:text="취급 품목"
+            android:textSize="12sp"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal"
+            android:textColor="#000000"
             >
         </TextView>
         <View
             android:layout_width="0dp"
             android:layout_weight="0.8"
             android:layout_height="wrap_content"
-            android:background="@drawable/xml_border"
+            android:background="@drawable/xml_border4"
             >
         </View>
     </LinearLayout>
@@ -66,22 +69,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:layout_margin="10dp">
+        android:layout_margin="10sp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="wrap_content"
-            android:text="나이"
-            android:textSize="20sp"
+            android:text="영업 시간"
+            android:textSize="12sp"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal"
+            android:textColor="#000000"
             >
         </TextView>
         <View
             android:layout_width="0dp"
             android:layout_weight="0.8"
             android:layout_height="wrap_content"
-            android:background="@drawable/xml_border"
+            android:background="@drawable/xml_border4"
             >
         </View>
     </LinearLayout>
@@ -90,42 +94,43 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.3"
-        android:layout_margin="10dp">
+        android:layout_margin="10sp">
         <TextView
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="wrap_content"
-            android:text="메모"
-            android:textSize="20sp"
+            android:text="트럭 소개"
+            android:textSize="12sp"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal"
+            android:textColor="#000000"
             >
         </TextView>
         <View
             android:layout_width="0dp"
             android:layout_weight="0.8"
             android:layout_height="wrap_content"
-            android:background="@drawable/xml_border"
+            android:background="@drawable/xml_border4"
             >
         </View>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:layout_margin="10dp">
-        <View
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="wrap_content">
+        android:layout_margin="10sp"
+        android:orientation="vertical">
 
-        </View>
+
         <Button
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            android:layout_height="wrap_content"
-            android:text="홍보신청"
+            android:layout_width="200sp"
+            android:layout_height="match_parent"
+            android:text="트럭 홍보하기"
+            android:background="@drawable/mybutton"
+            android:textColor="#ffffff"
+            android:textSize="14sp"
+            android:layout_gravity="center_horizontal"
             />
 
     </LinearLayout>
