--- a/app/src/main/res/layout/fragment_pos.xml
+++ b/app/src/main/res/layout/fragment_pos.xml
@@ -17,54 +17,110 @@
         android:layout_marginRight="15sp"
         android:layout_marginTop="10sp"
         android:layout_weight="2">
-
-        <TextView
-            android:id="@+id/menu01"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/menu01">
+        <TextView
+
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
             android:background="#FFC478"
             android:gravity="center_vertical"
-            android:text="메뉴 1"
+            android:text="케밥"
             android:textAlignment="center">
-
         </TextView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            app:srcCompat="@drawable/kebab"
+            android:scaleType="fitXY">
 
-        <TextView
-            android:id="@+id/menu02"
+        </ImageView>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="0.25"
-            android:background="#FFC478"
-            android:gravity="center_vertical"
-            android:text="메뉴 2"
-            android:textAlignment="center">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/menu02">
+            <TextView
 
-        </TextView>
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:background="#FFC478"
+                android:gravity="center_vertical"
+                android:text="큐브 스테이크"
+                android:textAlignment="center">
+            </TextView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                app:srcCompat="@drawable/cubestake"
+                android:scaleType="fitXY">
 
-        <TextView
-            android:id="@+id/menu03"
+            </ImageView>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="0.25"
-            android:background="#FFC478"
-            android:gravity="center_vertical"
-            android:text="메뉴 3"
-            android:textAlignment="center">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/menu03">
+            <TextView
 
-        </TextView>
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:background="#FFC478"
+                android:gravity="center_vertical"
+                android:text="부리또"
+                android:textAlignment="center">
+            </TextView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                app:srcCompat="@drawable/burito"
+                android:scaleType="fitXY">
 
-        <TextView
-            android:id="@+id/menu04"
+            </ImageView>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="0.25"
-            android:background="#FFC478"
-            android:gravity="center_vertical"
-            android:text="메뉴 4"
-            android:textAlignment="center">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/menu04">
+            <TextView
 
-        </TextView>
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:background="#FFC478"
+                android:gravity="center_vertical"
+                android:text="치킨샐러드"
+                android:textAlignment="center"
+                >
+            </TextView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                app:srcCompat="@drawable/chicken_salad"
+                android:scaleType="fitXY"
+                >
+
+            </ImageView>
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -84,7 +140,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.2"
             android:padding="10sp"
-            android:text="메뉴"
+            android:text="주문메뉴 선택"
             android:textSize="20sp" />
 
         <ListView
@@ -120,9 +176,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
-            android:text="바코드인식"
+            android:text="바 코 드"
             android:layout_weight="0.5"
-            android:background="#F3B96E" />
+            android:background="#F3B96E"
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
 
         <Button
             android:layout_width="0dp"
@@ -130,7 +188,10 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:background="#F3B96E" />
+            android:background="#F3B96E"
+            android:text="카 드"
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
 
         <Button
             android:id="@+id/cash"
@@ -139,8 +200,10 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="5dp"
             android:layout_weight="0.5"
-            android:text="현금결제"
-            android:background="#F3B96E" />
+            android:text="현 금"
+            android:background="#F3B96E"
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
     </LinearLayout>
 
 </LinearLayout>
