--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -19,11 +19,11 @@
         android:id="@+id/listview"
         android:layout_marginTop="10dp"
         tools:listitem="@layout/request_item"
-        android:dividerHeight="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/map" />
+        android:layout_below="@+id/map"
+        />
 
 
 </RelativeLayout>
